# airflow_sandbox

./: Makefile  docker-compose.yml  pyproject.toml
src/airflow_sandbox/dags/: example_dag.py
